--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@assemblyscript/loader": "^0.18.15"
+    "@assemblyscript/loader": "^0.18.15",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "assemblyscript": "^0.18.15"
