--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@assemblyscript/loader": "^0.18.15"
+    "@assemblyscript/loader": "^0.18.15",
+    "source-map-support": "^0.5.19"
   },
   "devDependencies": {
-    "assemblyscript": "^0.18.26",
+    "assemblyscript": "^0.19.2",
     "http-server": "^0.12.3"
   },
   "scripts": {
-    "asbuild:untouched": "asc assembly/index.ts --baseDir . --binaryFile src/build/untouched.wasm --textFile src/build/untouched.wat --target debug --exportRuntime",
+    "asbuild:untouched": "asc assembly/index.ts --baseDir . --binaryFile src/build/untouched.wasm --textFile src/build/untouched.wat --target debug --exportRuntime --sourceMap",
     "asbuild:optimized": "asc assembly/index.ts --baseDir . --binaryFile src/build/optimized.wasm --textFile src/build/optimized.wat --target release --exportRuntime",
     "asbuild": "yarn asbuild:untouched && yarn run asbuild:optimized",
     "serve": "yarn http-server src",
