--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
+    "@types/node": "^16.3.3",
     "assemblyscript": "^0.19.5",
-    "http-server": "^0.12.3"
+    "http-server": "^0.12.3",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
   },
   "scripts": {
-    "asbuild:untouched": "asc assembly/index.ts --baseDir . --binaryFile src/build/untouched.wasm --textFile src/build/untouched.wat --target debug --exportRuntime --sourceMap",
-    "asbuild:optimized": "asc assembly/index.ts --baseDir . --binaryFile src/build/optimized.wasm --textFile src/build/optimized.wat --target release --exportRuntime",
+    "asbuild:untouched": "asc assembly/index.ts --transform ./assembly/transforms/generateMaps.ts --baseDir . --binaryFile src/build/untouched.wasm --textFile src/build/untouched.wat --target debug --exportRuntime --sourceMap",
+    "asbuild:optimized": "asc assembly/index.ts --transform ./assembly/transforms/generateMaps.ts --baseDir . --binaryFile src/build/optimized.wasm --textFile src/build/optimized.wat --target release --exportRuntime",
     "asbuild": "yarn asbuild:untouched && yarn run asbuild:optimized",
     "serve": "yarn http-server src",
     "test": "node tests"
