--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "clean": "rimraf assembly/generatedLevels",
-    "asbuild:untouched": "yarn clean && asc assembly/index.ts --transform ./assembly/transforms/generateMaps.ts --baseDir . --binaryFile src/build/untouched.wasm --textFile src/build/untouched.wat --target debug --exportRuntime --sourceMap",
-    "asbuild:optimized": "yarn clean && asc assembly/index.ts --transform ./assembly/transforms/generateMaps.ts --baseDir . --binaryFile src/build/optimized.wasm --textFile src/build/optimized.wat --target release --exportRuntime",
+    "asbuild:untouched": "asc assembly/index.ts --transform ./assembly/transforms/generateMaps.ts --baseDir . --binaryFile src/build/untouched.wasm --textFile src/build/untouched.wat --target debug --exportRuntime --sourceMap",
+    "asbuild:optimized": "asc assembly/index.ts --baseDir . --binaryFile src/build/optimized.wasm --textFile src/build/optimized.wat --target release --exportRuntime",
     "asbuild": "yarn asbuild:untouched && yarn run asbuild:optimized",
     "serve": "yarn http-server src",
     "test": "node tests"
