Share logic between both map parsers, fixing the editor map load

--- a/scaffolding/tsconfig.json
+++ b/scaffolding/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": [
-    "./**/*.ts"
+    "./**/*.ts",
+    "../assembly/maps/mapParserBase.ts"
   ],
   "compilerOptions": {
     "types": ["@types/node"]
