Did some stuff to try and get both map editor (compiled by assemblyscript) and map transforms (compiled by typescript) to use the same code for importing maps.
Gave up due to assemblyscript using different Map.keys() return value and not having any compile time macros to skip code or any Array.from() function.

Editor cannot load levels right now, we'll have to get them read from imported files instead similar to how the title screen does it.

--- a/scaffolding/tsconfig.json
+++ b/scaffolding/tsconfig.json
@@ -1,9 +1,13 @@
 {
   "include": [
-    "./**/*.ts",
-    "../assembly/maps/mapParserBase.ts"
+    "./**/*.ts"
   ],
   "compilerOptions": {
-    "types": ["@types/node"]
+    "baseUrl": ".",
+    "lib": ["ES2021"],
+    "types": [
+      "@types/node",
+      "./@types/scaffolding"
+    ]
   }
 }
