--- a/scaffolding/tsconfig.json
+++ b/scaffolding/tsconfig.json
@@ -1,13 +1,6 @@
 {
+  "extends": "assemblyscript/std/assembly.json",
   "include": [
     "./**/*.ts"
-  ],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "lib": ["ES2021"],
-    "types": [
-      "@types/node",
-      "./@types/scaffolding"
-    ]
-  }
+  ]
 }
