--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "transform": "asc ./assembly/index.ts --transform ./scaffolding/transforms/generateMaps.ts --noEmit",
+    "transform": "asc ./assembly/index.ts --transform ./scaffolding/transforms/generateMaps.ts --noEmit --target debug",
     "asbuild:untouched": "asc assembly/index.ts --baseDir . --binaryFile src/build/untouched.wasm --textFile src/build/untouched.wat --target debug --exportRuntime --sourceMap http://localhost:8080/build/untouched.wasm.map",
     "asbuild:optimized": "asc assembly/index.ts --baseDir . --binaryFile src/build/optimized.wasm --textFile src/build/optimized.wat --target release --exportRuntime",
     "asbuild": "yarn asbuild:untouched && yarn run asbuild:optimized",
