--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.7.10",
-    "http-server": "^0.12.3",
+    "http-server": "^13.0.2",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
@@ -22,7 +22,7 @@
     "asbuild:untouched": "asc assembly/index.ts --baseDir . --binaryFile src/build/untouched.wasm --textFile src/build/untouched.wat --target debug --exportRuntime --sourceMap http://localhost:8080/build/untouched.wasm.map",
     "asbuild:optimized": "asc assembly/index.ts --baseDir . --binaryFile src/build/optimized.wasm --textFile src/build/optimized.wat --target release --exportRuntime",
     "asbuild": "yarn asbuild:untouched && yarn run asbuild:optimized",
-    "serve": "yarn http-server src",
+    "serve": "yarn http-server -c-1 src",
     "test": "node tests"
   }
 }
